--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,6 @@
 			}
 			section.about-us {
 				padding: 20px;
-				margin-bottom: 20px;
 			}
 
 			section.footer {
@@ -116,6 +115,7 @@
 				border-top: 1px solid #c1c1c1;
 				background: #eee;
 				bottom: 0;
+				position: absolute;
 			}
 		</style>
 	</head>
