--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 				font-size: 18px;
 				border-top: 1px solid #c1c1c1;
 				background: #eee;
+				bottom: 0;
+				position: absolute;
 			}
 		</style>
 	</head>
