--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<div class="container">
 				<h1 style="font-weight: bold;">We'll bring you to Beautiful places, Beautiful Memories you'll forever remember</h1>
 				<p>
-					Hongdae Travel Agency is a Korean based Travel Agency that focuses on tourist attractions in the Philippines and other Asian countries. We promise to give you quality service for you, your family and friends. Also, we promise to keep you safe and that you will enjoy your vacation. Thank you and God Bless!
+					Hongdae Travel Agency is a Philippine based Travel Agency that focuses on tourist attractions in the Philippines and other Asian countries. We promise to give you quality service for you, your family and friends. Also, we promise to keep you safe and that you will enjoy your vacation. Thank you and God Bless!
 				</p>
 			</div>
 		</div>
