--- a/moments.html
+++ b/moments.html
@@ -143,6 +143,7 @@
 				padding-top: 50%;
 				top: 0;
 				text-shadow: 0 0 3px #0000004a;
+				text-border: #FFFFFF;
 				user-select: none;
 			}
 			section.footer {
