--- a/moments.html
+++ b/moments.html
@@ -143,7 +143,7 @@
 				padding-top: 50%;
 				top: 0;
 				text-shadow: 0 0 3px #0000004a;
-				text-border: #FFFFFF;
+				-webkit-text-stroke-color: white;
 				user-select: none;
 			}
 			section.footer {
