--- a/aboutus.html
+++ b/aboutus.html
@@ -108,6 +108,8 @@
 			}
 
 			section.footer {
+				position: absolute;
+				width: 100%;
 				padding: 10px;
 				text-align: center;
 				font-family: 'Staatliches', sans-serif;
@@ -115,7 +117,6 @@
 				border-top: 1px solid #c1c1c1;
 				background: #eee;
 				bottom: 0;
-				position: absolute;
 			}
 		</style>
 	</head>
