--- a/aboutus.html
+++ b/aboutus.html
@@ -108,15 +108,16 @@
 			}
 
 			section.footer {
-				width: 100%;
-				position: absolute;
+				position: fixed;
+				left: 0;
+				right: 0;
+				bottom: 0;
 				padding: 10px;
 				text-align: center;
 				font-family: 'Staatliches', sans-serif;
 				font-size: 18px;
 				border-top: 1px solid #c1c1c1;
 				background: #eee;
-				bottom: 0;
 			}
 		</style>
 	</head>
