--- a/destination.html
+++ b/destination.html
@@ -523,7 +523,7 @@
 			function bookNow(id) {
 				$('#getToursAngloUlo').modal('hide');
 				Swal.fire({
-					title: 'You book the '+tour_list[id].tour_name,
+					title: 'You booked '+tour_list[id].tour_name,
 					text: 'Please wait. If your browser supports Refresh, you\'ll be redirected to booking page, in 5 seconds.',
 					showConfirmButton: false,
 					icon:'success'
